# CMake_tutorial

./: .gitignore  LICENSE  README.md
01-intro/: readme.md
02-simple_demo/: CMakeLists.txt  add.cpp  build.sh  calc  div.cpp  main.cpp  math.h  mul.cpp  readme.md  sub.cpp
03-set/: CMakeLists.txt
03-set/src/: add.cpp  calc.h  main.cpp  mul.cpp
03-set_01/: CMakeLists.txt
04-include/: CMakeLists.txt
05-library/: CMakeLists.txt
05-library/src/: div.cpp
06-link/: CMakeLists.txt  main.cpp  readme.md
